header alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -638,6 +638,7 @@ h1.arrow {
 	background:url('../img/h1-bg.png') no-repeat center bottom;
 	padding-bottom:30px;
 	font-weight: bold;
+	text-align: center;
 }
 h1.arrow span {
     color: rgb(24, 29, 58);
